fix background image on small mobile devices

--- a/css/main.scss
+++ b/css/main.scss
@@ -29,7 +29,7 @@ section {
 
 .hero-shoe {
 	position: absolute;
-	bottom: -7.5%;
+	bottom: -15%;
 	width: 100%;
 	height: 100%;
 	background: url('../img/hero-img.png');
